{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 297,
  "lineage": "e1912b2f-5ace-79ad-36bd-af844149c2c2",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:internet-gateway/igw-06051c2832cd25de9",
            "id": "igw-06051c2832cd25de9",
            "owner_id": "992382580810",
            "tags": {
              "Name": "wordpress-techtest-IGW"
            },
            "tags_all": {
              "Name": "wordpress-techtest-IGW"
            },
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:route-table/rtb-0a74b801f87a51afa",
            "id": "rtb-0a74b801f87a51afa",
            "owner_id": "992382580810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06051c2832cd25de9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-techtest-private-RT"
            },
            "tags_all": {
              "Name": "wordpress-techtest-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:route-table/rtb-0dfec39a89024e402",
            "id": "rtb-0dfec39a89024e402",
            "owner_id": "992382580810",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06051c2832cd25de9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wordpress-techtest-public-RT"
            },
            "tags_all": {
              "Name": "wordpress-techtest-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0bffe076d8d4a7",
            "route_table_id": "rtb-0a74b801f87a51afa",
            "subnet_id": "subnet-0919332a6795f31ae"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.private-rt",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e770ecd55eb8d19",
            "route_table_id": "rtb-0a74b801f87a51afa",
            "subnet_id": "subnet-070b71498996c8d1c"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.private-rt",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0435b6836ebd04727",
            "route_table_id": "rtb-0dfec39a89024e402",
            "subnet_id": "subnet-071030262469a8713"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.public-rt",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e61e1cf13ba5f5b",
            "route_table_id": "rtb-0dfec39a89024e402",
            "subnet_id": "subnet-009e21a029243a51d"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.public-rt",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:subnet/subnet-0919332a6795f31ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "173.30.1.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0919332a6795f31ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382580810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-techtest-private-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress-techtest-private-subnet-1"
            },
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:subnet/subnet-070b71498996c8d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "173.30.1.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070b71498996c8d1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382580810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-techtest-private-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress-techtest-private-subnet-2"
            },
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:subnet/subnet-071030262469a8713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "173.30.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071030262469a8713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382580810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-techtest-public-subnet-1"
            },
            "tags_all": {
              "Name": "wordpress-techtest-public-subnet-1"
            },
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:subnet/subnet-009e21a029243a51d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "173.30.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009e21a029243a51d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382580810",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wordpress-techtest-public-subnet-2"
            },
            "tags_all": {
              "Name": "wordpress-techtest-public-subnet-2"
            },
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:vpc/vpc-0b83586ac75ee6363",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "173.30.0.0/22",
            "default_network_acl_id": "acl-00bfd3072fd34e294",
            "default_route_table_id": "rtb-0a9659287c216945f",
            "default_security_group_id": "sg-017e703c3c1695699",
            "dhcp_options_id": "dopt-08afd883a4bce2a6a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b83586ac75ee6363",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9659287c216945f",
            "owner_id": "992382580810",
            "tags": {
              "Name": "wordpress-techtest-vpc"
            },
            "tags_all": {
              "Name": "wordpress-techtest-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:security-group/sg-0455a389cd43f5e7a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0455a389cd43f5e7a",
            "ingress": [],
            "name": "wordpress-techtest-rds-sg",
            "name_prefix": "",
            "owner_id": "992382580810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-techtest-rds-sg"
            },
            "tags_all": {
              "Name": "wordpress-techtest-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-861008960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0455a389cd43f5e7a",
            "security_group_rule_id": "sgr-0834345caa2bc5bd7",
            "self": false,
            "source_security_group_id": "sg-01c65a4748fd326c3",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc",
            "module.rds_sg.aws_security_group.sg",
            "module.wp_sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.wp_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:992382580810:security-group/sg-01c65a4748fd326c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c65a4748fd326c3",
            "ingress": [],
            "name": "wordpress-techtest-wp-sg",
            "name_prefix": "",
            "owner_id": "992382580810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-techtest-wp-sg"
            },
            "tags_all": {
              "Name": "wordpress-techtest-wp-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83586ac75ee6363"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.wp_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-4096259537",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c65a4748fd326c3",
            "security_group_rule_id": "sgr-0d9b6d4ba9110b555",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc",
            "module.wp_sg.aws_security_group.sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-448338970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01c65a4748fd326c3",
            "security_group_rule_id": "sgr-0373491bd5aec61d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc",
            "module.wp_sg.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}